# multNodeCom

./: .gitignore  CMakeLists.txt  C_COM.code-workspace  run_test.sh
MultNodeCom/: CMakeLists.txt
MultNodeCom/3rd_part/: ringbuffer.c  ringbuffer.h
MultNodeCom/bus_core/: bus_driver.c  bus_driver.h  bus_type.h  route_handle.c  route_handle.h  route_interface.c  route_interface.h  route_protocol.c  route_protocol.h
MultNodeCom/bus_device/: bus_serial_device.h  bus_socket_device.c  bus_socket_device.h
MultNodeCom/bus_driver/: bus_serial_driver.c  bus_serial_driver.h  bus_socket_driver.c  bus_socket_driver.h
MultNodeCom/bus_hardware/: serial.c  serial.h  socket.c  socket.h
MultNodeCom/bus_interface/: bus_driver.c  bus_driver.h  bus_register_interface.c  bus_register_interface.h
MultNodeCom/utils/: contain_of.h  crc16.h  getTimeStamp.c  getTimeStamp.h  utilsAssert.c  utilsAssert.h  utilsPrintf.c  utilsPrintf.h
test/: main.c  test_serial.c  test_serial_local.c  test_serial_protocol.c
test/cppUTest/: cppUtest_serial_start.cpp  cppUtest_serial_test.cpp  serial_test.cpp
test/cppUTest_module/: cppUtest_serial_local_hard_test.cpp  cppUtest_serial_local_rb.cpp  cppUtest_serial_rb_A2B_test.cpp  cppUtest_socket_easy_test.cpp  readme.txt
test/normal_test/: simple_test_socket.c  socket_client.c  socket_server.c  test_serial_local.c  test_serial_protocol.c  test_socket_bus.c  test_socket_protocol.c
